[package]
name = "uhid-virt"
version = "0.0.8"
authors = ["Luke Jones <luke@ljones.dev>", "Sameer Puri <purisame@spuri.io>", "Daniel Stiner <danstiner@gmail.com>"]
edition = "2021"
description = "Interface to Linux UHID (user-space HID transport drivers)"
repository = "https://github.com/flukejones/uhid-virt"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["hid", "uhid", "linux", "userspace", "transport"]
categories = ["os", "os::unix-apis"]
exclude = [
    ".travis.yml",
    "example/"
]

[lib]
doc = true
test = true

[dependencies]
uhidrs-sys = "1.0.4"
enumflags2 = "^0.7.8"
libc = "^0.2.150"
